# bfs-ql

./: .env.example  CHANGELOG.md  CLAUDE.md  DBpediaProblems.md  DEMO_DATA.md  H  PLAN1.md  README.md  delta.md  demo_desmopressin.py  linkedin1.md  linkedin2.md  linkedin3.md  linkedin4.md  linkedin5.md  lint.sh  pyproject.toml
.claude/: settings.json
.github/workflows/: test.yml
bfsql/: __init__.py  __main__.py  abc.py  cache.py  engine.py  models.py  server.py
bfsql/backends/: neo4j.py  postgres.py  sparql.py
tests/: conftest.py  test_engine.py  test_neo4j.py  test_postgres.py  test_server.py  test_sparql.py  test_sparql_integration.py
