[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bfsql"]

[project]
name = "bfs-ql"
version = "0.1.0"
description = "BFS-QL graph query protocol for language models"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "python-dotenv>=1.0",
]

[project.scripts]
bfs-ql = "bfsql.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
