[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bfsql"]

[project]
name = "bfs-ql"
version = "0.1.0"
description = "BFS-QL graph query protocol for language models"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Will Ware" }]
requires-python = ">=3.12"
keywords = ["knowledge-graph", "llm", "mcp", "graph-rag", "bfs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.0,<3.0",
    "pydantic>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
]

[project.urls]
Repository = "https://github.com/wware/bfs-ql"
Book = "https://github.com/wware/bfs-ql-book"

[project.scripts]
bfs-ql = "bfsql.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
    "aioresponses>=0.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
